[tool.poetry]
name = "MESA-Toolkit"
version = "0.1.0"
description = ""
authors = ["Miguel Rios <miguel.rios@trio.dhs.gov>"]
readme = "README.md"
homepage = "https://github.com/m1j09830/MESA-Toolkit"
repository = "https://github.com/m1j09830/MESA-Toolkit"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.9.0"
typer = "^0.15.0"
click = "^8.1.7"
jinja2 = "^3.1.6"
pdfkit = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0"
pytest = "^8.0"
pytest-mock = "^3.11.1"
black = "^24.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
MESA-Toolkit = "mesa_toolkit.__main__:app"
